@startuml

'left to right direction

package fsm <<Node>> {
    class StateManager

    package module <<Node>> {
        class StateHandler
        class StateTaskManager

        package module_base <<Node>> {
            class StateTaskUnit
        }
    }

    package unit <<Node>> {
        class StateUnit
    }

    package event <<Node>> {
        class StateEventManager

        package event_base <<Node>> {
            class StateEvent
            class CallBack
        }
    }

    package info <<Node>> {
        class ResultCode
    }
}

StateManager <|-- StateHandler
StateManager <|-- StateUnit

StateHandler <|-- StateEventManager
StateTaskManager <|-- StateTaskUnit
StateEventManager <|-- StateEvent

@enduml